# otrsp

./: Cargo.toml  OTRSP-FIX-PLAN.md  README.md
examples/: interactive.rs  so2r_demo.rs
src/: builder.rs  device.rs  error.rs  event.rs  io.rs  lib.rs  protocol.rs  switch.rs  transport.rs  types.rs
tests/: integration.rs  protocol.rs
